hphp/test/zend/good/zend/036.php
<?php

$test[function(){}] = 1;
$a{function() { }} = 1;

?>