hphp/test/zend/bad/tests/basic/rfc1867_max_file_uploads_empty_files_debug.php
<?php
var_dump($_FILES);
var_dump($_POST);
if (is_uploaded_file($_FILES["file1"]["tmp_name"])) {
	var_dump(file_get_contents($_FILES["file1"]["tmp_name"]));
}
?>